chore: z-link - removed deprecated component

--- a/src/pages/book-cards.html
+++ b/src/pages/book-cards.html
@@ -121,10 +121,28 @@
               <span class="laz-description">Online e offline<br />anche in versione liquida con lettura immersiva</span>
             </div>
           </div>
-          <div class="resource resource-mock"><z-link>MOCK 1</z-link></div>
-          <div class="resource resource-mock"><z-link>MOCK 2</z-link></div>
-          <div class="resource resource-mock"><button>MOCK 3</button></div>
-          <div class="resource resource-mock"><z-link>MOCK 4</z-link></div>
+          <div class="resource resource-mock">
+            <a
+              href="#"
+              class="z-link"
+              >MOCK 1</a
+            >
+          </div>
+          <div class="resource resource-mock">
+            <a
+              href="#"
+              class="z-link"
+              >MOCK 2</a
+            >
+          </div>
+          <div class="resource resource-mock"><button class="z-link">MOCK 3</button></div>
+          <div class="resource resource-mock">
+            <a
+              href="#"
+              class="z-link"
+              >MOCK 4</a
+            >
+          </div>
         </div>
       </z-book-card>
 
@@ -208,10 +226,28 @@
                 >
               </div>
             </div>
-            <div class="resource resource-mock"><z-link>MOCK 1</z-link></div>
-            <div class="resource resource-mock"><z-link>MOCK 2</z-link></div>
+            <div class="resource resource-mock">
+              <a
+                href="#"
+                class="z-link"
+                >MOCK 1</a
+              >
+            </div>
+            <div class="resource resource-mock">
+              <a
+                href="#"
+                class="z-link"
+                >MOCK 2</a
+              >
+            </div>
             <div class="resource resource-mock"><button>MOCK 3</button></div>
-            <div class="resource resource-mock"><z-link>MOCK 4</z-link></div>
+            <div class="resource resource-mock">
+              <a
+                href="#"
+                class="z-link"
+                >MOCK 4</a
+              >
+            </div>
           </div>
           <div slot="footer-cta">
             <z-button
