feat: added divider in menu element

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,6 @@
         <h1 slot="title">Albe test app</h1>
       </z-app-header>
     </header>
-    <main>
-    </main>
+    <main></main>
   </body>
 </html>
