feat: update migration file and components using new blue link class for retrocompatibility

--- a/src/pages/book-cards.html
+++ b/src/pages/book-cards.html
@@ -124,22 +124,22 @@
           <div class="resource resource-mock">
             <a
               href="#"
-              class="z-link"
+              class="z-link z-link-blue"
               >MOCK 1</a
             >
           </div>
           <div class="resource resource-mock">
             <a
               href="#"
-              class="z-link"
+              class="z-link z-link-blue"
               >MOCK 2</a
             >
           </div>
-          <div class="resource resource-mock"><button class="z-link">MOCK 3</button></div>
+          <div class="resource resource-mock"><button class="z-link z-link-blue">MOCK 3</button></div>
           <div class="resource resource-mock">
             <a
               href="#"
-              class="z-link"
+              class="z-link z-link-blue"
               >MOCK 4</a
             >
           </div>
@@ -229,14 +229,14 @@
             <div class="resource resource-mock">
               <a
                 href="#"
-                class="z-link"
+                class="z-link z-link-blue"
                 >MOCK 1</a
               >
             </div>
             <div class="resource resource-mock">
               <a
                 href="#"
-                class="z-link"
+                class="z-link z-link-blue"
                 >MOCK 2</a
               >
             </div>
@@ -244,7 +244,7 @@
             <div class="resource resource-mock">
               <a
                 href="#"
-                class="z-link"
+                class="z-link z-link-blue"
                 >MOCK 4</a
               >
             </div>
