--- a/src/pages/book-cards.html
+++ b/src/pages/book-cards.html
@@ -78,9 +78,9 @@
         opera-title="Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro"
         volume-title="Volume 3 con Tutor con Tutor con Tutor con Tutor con Tutor con Tutor con Tutor con Tutor con Tutor con Tutor con Tutor con Tutor con Tutor"
         isbn="9788808930552 9788808930552 9788808930552 9788808930552 9788808930552 9788808930552 9788808930552"
-        edi="active"
-        annotated="disabled"
-        teacher-version="active"
+        edi='{"status":"active","interactive":true}'
+        annotated='{"status":"disabled","interactive":true}'
+        teacher-version='{"status":"active","interactive":false}'
         adoption="true"
         catalog-url="https://www.zanichelli.it"
         ebook-url="https://my.zanichelli.it"
@@ -96,6 +96,7 @@
         isbn="9788808930552"
         ebook-url="https://my.zanichelli.it"
       >
+        <div slot="ebook">EBOOK SLOT</div>
       </z-book-card>
     </div>
   </body>
