feat!: tags, storybook, flexible app

--- a/src/pages/book-cards.html
+++ b/src/pages/book-cards.html
@@ -48,25 +48,26 @@
             info="test test"
             link="http://localhost"
             laz="false"
-            style="border-right: 1px solid #d6d6d6; border-bottom: 1px solid #d6d6d6"
+            style="width: 315px; height: 47px; border-right: 1px solid #d6d6d6; border-bottom: 1px solid #d6d6d6"
           ></z-book-card-app>
           <z-book-card-app
             icon="https://placehold.co/24"
             name="Tutor di matematica"
             info="test test"
             link="http://localhost"
-            style="border-bottom: 1px solid #d6d6d6"
+            style="width: 315px; height: 47px; border-bottom: 1px solid #d6d6d6"
           ></z-book-card-app>
           <z-book-card-app
             icon="https://placehold.co/24"
             name="Mappe"
             link="http://localhost"
-            style="border-right: 1px solid #d6d6d6"
+            style="width: 315px; height: 47px; border-right: 1px solid #d6d6d6"
           ></z-book-card-app>
           <z-book-card-app
             icon="https://placehold.co/24"
             name="Scrittura"
             link="http://localhost"
+            style="width: 315px; height: 47px"
           ></z-book-card-app>
         </div>
       </z-book-card>
@@ -98,6 +99,35 @@
       >
         <div slot="ebook">EBOOK SLOT</div>
       </z-book-card>
+    </div>
+
+    <div>
+      <h2>App</h2>
+      <z-book-card-app
+        icon="https://placehold.co/24"
+        name="Risorse per l'insegnante"
+        info="test test"
+        link="http://localhost"
+        laz="false"
+      ></z-book-card-app>
+      <br />
+      <z-book-card-app
+        icon="https://placehold.co/24"
+        name="Risorse per l'insegnante"
+        info="test test"
+        link="http://localhost"
+        laz="false"
+        style="height: 64px; width: 500px"
+      ></z-book-card-app>
+      <br />
+      <z-book-card-app
+        icon="https://placehold.co/24"
+        name="Risorse per l'insegnante"
+        info="test test"
+        link="http://localhost"
+        laz="false"
+        style="height: 32px; width: 300px"
+      ></z-book-card-app>
     </div>
   </body>
 </html>
