fix: fix word break

--- a/src/pages/book-cards.html
+++ b/src/pages/book-cards.html
@@ -43,9 +43,7 @@
           style="display: flex; flex-wrap: wrap; border-top: 1px solid #d6d6d6"
         >
           <z-book-card-app
-            icon="https://placehold.co/24"
             name="Risorse per l'insegnante"
-            info="test test"
             link="http://localhost"
             laz="false"
             style="
@@ -57,20 +55,21 @@
             "
           ></z-book-card-app>
           <z-book-card-app
-            icon="https://placehold.co/24"
+            logo="https://placehold.co/24"
             name="Tutor di matematica"
             info="test test"
             link="http://localhost"
             style="width: 315px; height: 47px; border-bottom: 1px solid #d6d6d6; --z-book-card-app-padding-x: 16px"
           ></z-book-card-app>
           <z-book-card-app
-            icon="https://placehold.co/24"
-            name="Mappe"
+            name="Intelligenza Artificiale"
+            info="sadsa"
+            logo="https://appswitcher-configurations.s3.eu-west-1.amazonaws.com/icons/6752c3a3478ba_sito_del_libro.svg"
             link="http://localhost"
             style="width: 315px; height: 47px; border-right: 1px solid #d6d6d6; --z-book-card-app-padding-x: 16px"
           ></z-book-card-app>
           <z-book-card-app
-            icon="https://placehold.co/24"
+            logo="https://placehold.co/24"
             name="Scrittura"
             link="http://localhost"
             style="width: 315px; height: 47px; --z-book-card-app-padding-x: 16px"
@@ -124,7 +123,7 @@
           style="display: flex; flex-wrap: wrap"
         >
           <z-book-card-app
-            icon="https://placehold.co/24"
+            logo="https://placehold.co/24"
             name="Risorse per l'insegnante"
             info="test test"
             link="http://localhost"
@@ -132,20 +131,20 @@
             style="width: 315px; height: 47px; border-right: 1px solid #d6d6d6; border-bottom: 1px solid #d6d6d6"
           ></z-book-card-app>
           <z-book-card-app
-            icon="https://placehold.co/24"
+            logo="https://placehold.co/24"
             name="Tutor di matematica"
             info="test test"
             link="http://localhost"
             style="width: 315px; height: 47px; border-bottom: 1px solid #d6d6d6"
           ></z-book-card-app>
           <z-book-card-app
-            icon="https://placehold.co/24"
+            logo="https://placehold.co/24"
             name="Mappe"
             link="http://localhost"
             style="width: 315px; height: 47px; border-right: 1px solid #d6d6d6"
           ></z-book-card-app>
           <z-book-card-app
-            icon="https://placehold.co/24"
+            logo="https://placehold.co/24"
             name="Scrittura"
             link="http://localhost"
             style="width: 315px; height: 47px"
@@ -185,15 +184,15 @@
     <div>
       <h2>App</h2>
       <z-book-card-app
-        icon="https://placehold.co/24"
+        logo="https://placehold.co/24"
         name="Risorse per l'insegnante"
         info="test test"
         link="http://localhost"
-        laz="false"
+        laz="true"
       ></z-book-card-app>
       <br />
       <z-book-card-app
-        icon="https://placehold.co/24"
+        logo="https://placehold.co/24"
         name="Risorse per l'insegnante"
         info="test test"
         link="http://localhost"
@@ -202,9 +201,16 @@
       ></z-book-card-app>
       <br />
       <z-book-card-app
-        icon="https://placehold.co/24"
+        logo="https://placehold.co/24"
         name="Risorse per l'insegnante"
         info="test test"
+        link="http://localhost"
+        laz="false"
+        style="height: 32px; width: 300px"
+      ></z-book-card-app>
+      <br />
+      <z-book-card-app
+        name="Risorse per l'insegnante lunghe lunghe lunghe lunghissime"
         link="http://localhost"
         laz="false"
         style="height: 32px; width: 300px"
