feat: add box-sizing and refactor height

--- a/src/pages/book-cards.html
+++ b/src/pages/book-cards.html
@@ -88,7 +88,7 @@
         ebook-url="https://my.zanichelli.it"
       >
         <div
-          slot="preview"
+          slot="coverOverlay"
           style="
             font-family: IBM Plex Sans;
             font-size: 14px;
@@ -245,7 +245,7 @@
         catalog-url="https://www.zanichelli.it"
         ebook-url="https://my.zanichelli.it"
       >
-        <div slot="preview">
+        <div slot="coverOverlay">
           <div
             style="
               font-family: IBM Plex Sans;
@@ -295,7 +295,7 @@
         isbn="9788808930552"
         ebook-url="https://my.zanichelli.it"
       >
-        <div slot="preview"></div>
+        <div slot="coverOverlay"></div>
         <div slot="ebook">EBOOK SLOT</div>
       </z-book-card>
     </div>
