fix: z-book-card add reflowable prop

--- a/src/pages/book-cards.html
+++ b/src/pages/book-cards.html
@@ -86,6 +86,7 @@
         isbn="9788808930552"
         catalog-url="https://www.zanichelli.it"
         ebook-url="https://my.zanichelli.it"
+        reflowable="true"
       >
         <div
           slot="coverOverlay"
