--- a/src/pages/book-cards.html
+++ b/src/pages/book-cards.html
@@ -33,11 +33,11 @@
           variant="landscape"
           cover="https://s3-eu-west-1.amazonaws.com/staticmy.zanichelli.it/copertine/dashboard/m40066.9788808930552.jpg"
           authors="Massimo Bergamini, Anna Trifone, Graziella Barozzi"
-          title="Matematica.azzurro"
-          subtitle="Volume 3 con Tutor"
+          opera-title="Matematica.azzurro"
+          volume-title="Volume 3 con Tutor"
           isbn="9788808930552"
+          isbn-label="(ed. cartacea)"
           year="2025"
-          catalog-url="https://www.zanichelli.it"
           ebook-url="https://my.zanichelli.it"
         >
         </z-book-card>
@@ -48,10 +48,9 @@
           variant="landscape"
           cover="https://s3-eu-west-1.amazonaws.com/staticmy.zanichelli.it/copertine/dashboard/m40066.9788808930552.jpg"
           authors="Massimo Bergamini, Anna Trifone, Graziella Barozzi"
-          title="Matematica.azzurro"
-          subtitle="Volume 3 con Tutor"
+          opera-title="Matematica.azzurro"
+          volume-title="Volume 3 con Tutor"
           isbn="9788808930552"
-          catalog-url="https://www.zanichelli.it"
           ebook-url="https://my.zanichelli.it"
           reflowable="true"
         >
@@ -72,17 +71,25 @@
           <div slot="cta">
             <z-icon name="star-full"></z-icon>
           </div>
-          <div
-            slot="tags"
-            style="display: flex; gap: 4px"
-          >
+          <div slot="tags">
             <z-tag>TAG</z-tag>
             <z-tag>TAG</z-tag>
             <z-tag>TAG</z-tag>
             <z-tag>TAG</z-tag>
             <z-tag>TAG</z-tag>
           </div>
-          <div slot="chip">
+          <div slot="data">
+            <a
+              href="https://www.zanichelli.it"
+              class="catalog-link z-link z-link-blue z-link-icon body-4-sb"
+              >Scheda catalogo
+              <z-icon
+                name="arrow-quad-north-east"
+                fill="color-primary01-icon"
+                width="14"
+                height="14"
+              ></z-icon>
+            </a>
             <div style="background-color: var(--green100); border-radius: 100px">CHIP</div>
           </div>
           <div
@@ -131,14 +138,9 @@
           variant="landscape"
           cover="https://s3-eu-west-1.amazonaws.com/staticmy.zanichelli.it/copertine/dashboard/m40001.9788808404619.jpg"
           authors="Massimo Bergamini, Anna Trifone, Graziella Barozzi, Massimo Bergamini, Anna Trifone, Graziella Barozzi"
-          title="Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro"
-          subtitle="Volume 3 con Tutor con Tutor con Tutor con Tutor con Tutor con Tutor con Tutor con Tutor con Tutor con Tutor con Tutor con Tutor con Tutor"
+          opera-title="Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro"
+          volume-title="Volume 3 con Tutor con Tutor con Tutor con Tutor con Tutor con Tutor con Tutor con Tutor con Tutor con Tutor con Tutor con Tutor con Tutor"
           isbn="9788808930552 9788808930552 9788808930552 9788808930552 9788808930552 9788808930552 9788808930552"
-          edi='{"status":"active","interactive":true}'
-          annotated='{"status":"disabled","interactive":true}'
-          teacher-version='{"status":"active","interactive":false}'
-          adoption="true"
-          catalog-url="https://www.zanichelli.it"
           ebook-url="https://my.zanichelli.it"
         >
         </z-book-card>
@@ -148,7 +150,7 @@
         <z-book-card
           variant="landscape"
           cover="http://dizionari.zanichelli.it/images/opere/ZING2024/ZING2024_copertina.jpg"
-          title="Matematica.azzurro"
+          opera-title="Matematica.azzurro"
         >
         </z-book-card>
       </div>
@@ -162,11 +164,10 @@
             variant="portrait"
             cover="https://s3-eu-west-1.amazonaws.com/staticmy.zanichelli.it/copertine/dashboard/m40066.9788808930552.jpg"
             authors="Massimo Bergamini, Anna Trifone, Graziella Barozzi"
-            title="Matematica.azzurro"
-            subtitle="Volume 3 con Tutor"
+            opera-title="Matematica.azzurro"
+            volume-title="Volume 3 con Tutor"
             isbn="9788808930552"
             year="2025"
-            catalog-url="https://www.zanichelli.it"
             ebook-url="https://my.zanichelli.it"
           >
           </z-book-card>
@@ -177,10 +178,9 @@
             variant="portrait"
             cover="https://s3-eu-west-1.amazonaws.com/staticmy.zanichelli.it/copertine/dashboard/m40066.9788808930552.jpg"
             authors="Massimo Bergamini, Anna Trifone, Graziella Barozzi"
-            title="Matematica.azzurro"
-            subtitle="Volume 3 con Tutor"
+            opera-title="Matematica.azzurro"
+            volume-title="Volume 3 con Tutor"
             isbn="9788808930552"
-            catalog-url="https://www.zanichelli.it"
             ebook-url="https://my.zanichelli.it"
             reflowable="true"
           >
@@ -201,17 +201,25 @@
             <div slot="cta">
               <z-icon name="star-full"></z-icon>
             </div>
-            <div
-              slot="tags"
-              style="display: flex; gap: 4px"
-            >
-              <z-tag>TAG</z-tag>
-              <z-tag>TAG</z-tag>
-              <z-tag>TAG</z-tag>
-              <z-tag>TAG</z-tag>
-              <z-tag>TAG</z-tag>
+            <div slot="tags">
+              <z-tag>TAG TAG</z-tag>
+              <z-tag>TAG TAG TAG</z-tag>
+              <z-tag>TAG TAG TAG</z-tag>
+              <z-tag>TAG TAG TAG</z-tag>
+              <z-tag>TAG TAG TAG</z-tag>
             </div>
-            <div slot="chip">
+            <div slot="data">
+              <a
+                href="https://www.zanichelli.it"
+                class="catalog-link z-link z-link-blue z-link-icon body-4-sb"
+                >Scheda catalogo
+                <z-icon
+                  name="arrow-quad-north-east"
+                  fill="color-primary01-icon"
+                  width="14"
+                  height="14"
+                ></z-icon>
+              </a>
               <div style="background-color: var(--green100); border-radius: 100px">CHIP</div>
             </div>
             <div
@@ -258,14 +266,13 @@
         <div>
           <z-book-card
             variant="portrait"
-            cover="https://s3-eu-west-1.amazonaws.com/staticmy.zanichelli.it/copertine/dashboard/m40001.9788808404619.jpg"
+            cover="https://staticmy.zanichelli.it/catalogo/assets/m40001.9788808404619.jpg"
             authors="Massimo Bergamini, Anna Trifone, Graziella Barozzi, Massimo Bergamini, Anna Trifone, Graziella Barozzi"
-            title="Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro"
-            subtitle="Volume 3 con Tutor con Tutor con Tutor con Tutor con Tutor con Tutor con Tutor con Tutor con Tutor con Tutor con Tutor con Tutor con Tutor"
+            opera-title="Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro"
+            volume-title="Volume 3 con Tutor con Tutor con Tutor con Tutor con Tutor con Tutor con Tutor con Tutor con Tutor con Tutor con Tutor con Tutor con Tutor"
             isbn="9788808930552 9788808930552 9788808930552 9788808930552 9788808930552 9788808930552 9788808930552"
-            catalog-url="https://www.zanichelli.it"
             ebook-url="https://my.zanichelli.it"
-            style="height: 700px; width: 400px"
+            style="height: 800px; width: 400px; --z-book-card-portrait-cover-height: 500px"
           >
           </z-book-card>
         </div>
@@ -275,12 +282,11 @@
             variant="portrait"
             cover="https://s3-eu-west-1.amazonaws.com/staticmy.zanichelli.it/copertine/dashboard/m40001.9788808404619.jpg"
             authors="Massimo Bergamini, Anna Trifone, Graziella Barozzi, Massimo Bergamini, Anna Trifone, Graziella Barozzi"
-            title="Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro"
-            subtitle="Volume 3 con Tutor con Tutor con Tutor con Tutor con Tutor con Tutor con Tutor con Tutor con Tutor con Tutor con Tutor con Tutor con Tutor"
+            opera-title="Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro Matematica.azzurro"
+            volume-title="Volume 3 con Tutor con Tutor con Tutor con Tutor con Tutor con Tutor con Tutor con Tutor con Tutor con Tutor con Tutor con Tutor con Tutor"
             isbn="9788808930552 9788808930552 9788808930552 9788808930552 9788808930552 9788808930552 9788808930552"
-            catalog-url="https://www.zanichelli.it"
             ebook-url="https://my.zanichelli.it"
-            style="height: 600px; width: 250px"
+            style="height: 600px; width: 250px; --z-book-card-portrait-cover-height: 300px"
           >
           </z-book-card>
         </div>
@@ -289,7 +295,7 @@
           <z-book-card
             variant="portrait"
             cover="http://dizionari.zanichelli.it/images/opere/ZING2024/ZING2024_copertina.jpg"
-            title="Matematica.azzurro"
+            opera-title="Matematica.azzurro"
           >
           </z-book-card>
         </div>
