--- a/src/pages/book-cards.html
+++ b/src/pages/book-cards.html
@@ -25,7 +25,7 @@
     ></script>
   </head>
 
-  <body style="margin: 0; padding: 16px; background-color: #aaa">
+  <body style="margin: 0; padding: 16px; background-color: #eee">
     <h2>Landscape Variant</h2>
     <div style="display: flex; flex-wrap: wrap; gap: 16px">
       <div>
