chore: default text and fill color for stories; tune some component's color

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -2,4 +2,9 @@
   html {
     font-family: var(--font-family-sans);
   }
+
+  body {
+    color: var(--color-default-text);
+    fill: var(--color-default-icon);
+  }
 </style>
