chore: revert index.html

--- a/src/index.html
+++ b/src/index.html
@@ -30,47 +30,6 @@
         <h1 slot="title">Albe test app</h1>
       </z-app-header>
     </header>
-    <main>
-      <div style="margin: 16px; display: flex">
-        <z-result-card
-          author="Massimo Bergamini, Graziella Barozzi"
-          card-title="Opera Title"
-          card-subtitle="App e software per una didattica attiva"
-          cover="https://place.abh.ai/s3fs-public/placeholder/DSC_0199_400x400.JPG"
-        >
-          <span slot="tags">Tags</span>
-          <span slot="tags">Tags</span>
-          <span slot="tags">Tags</span>
-          <span slot="volumes">Volume unico</span>
-        </z-result-card>
-        <z-result-card
-          style="margin-left: 16px"
-          author="Massimo Bergamini, Graziella Barozzi"
-          card-title="Opera Title prova molto molto lungo su max due righe a desktop, una a mobile con ellipsis per il troncamento"
-          card-subtitle="2022"
-          has-multiple-covers="true"
-          cover="https://place.abh.ai/s3fs-public/placeholder/DSC_0199_400x400.JPG"
-        >
-          <span slot="tags">Tags</span>
-          <span slot="volumes">4 Volumi</span>
-        </z-result-card>
-      </div>
-      <div style="margin: 16px; display: flex">
-        <z-result-card
-          author="Massimo Bergamini, Graziella Barozzi"
-          card-title="LaZ Tutor di matematica"
-          card-subtitle="Che cos'è? laZ Tutor di matematica è il sito Zanichelli  che ti aiuta a imparare nel modo che preferisci: parti dagli esercizi e scopri che cosa ti serve ripassare, oppure guarda un video di teoria e poi mettiti alla prova."
-          is-info-card="true"
-          has-multiple-covers="true"
-          cover="https://place.abh.ai/s3fs-public/placeholder/DSC_0199_400x400.JPG"
-        />
-      </div>
-    </main>
-
-    <style>
-      body {
-        margin: 0;
-      }
-    </style>
+    <main></main>
   </body>
 </html>
