feat: empty index & comment

--- a/src/index.html
+++ b/src/index.html
@@ -30,20 +30,7 @@
         <h1 slot="title">Albe test app</h1>
       </z-app-header>
     </header>
-    <main>
-      <z-book-card
-        variant="landscape"
-        cover="https://s3-eu-west-1.amazonaws.com/staticmy.zanichelli.it/copertine/dashboard/m40066.9788808930552.jpg"
-        authors="Massimo Bergamini, Anna Trifone, Graziella Barozzi"
-        opera-title="Matematica.azzurro"
-        volume-title="Volume 3 con Tutor"
-        isbn="9788808930552"
-        isbn-label="(ed. cartacea)"
-        year="2025"
-        ebook-url="https://my.zanichelli.it"
-      >
-      </z-book-card>
-    </main>
+    <main></main>
   </body>
   <style>
     body {
