fix: cover has a focus

--- a/src/pages/book-cards.html
+++ b/src/pages/book-cards.html
@@ -66,7 +66,11 @@
               text-transform: uppercase;
             "
           >
-            Anteprima del libro senza risorse multimediali
+            <a
+              style="text-decoration: none; color: inherit"
+              href="#"
+              >Anteprima del libro senza risorse multimediali</a
+            >
           </div>
           <div slot="cta">
             <z-icon name="star-full"></z-icon>
