feat(ZANIT-961): accessibility for toolbar navigation

--- a/src/index.html
+++ b/src/index.html
@@ -47,62 +47,71 @@
             <z-tool
               icon="gear"
               tooltip="Impostazioni"
+              onclick="console.log('ciao1')"
             >
               <z-toolbar>
+                <div class="group">
+                  <z-tool
+                    icon="chevron-up"
+                    tooltip="Su"
+                    onclick="console.log('ciao2')"
+                  ></z-tool>
+                  <z-tool
+                    icon="chevron-down"
+                    tooltip="Giù"
+                    onclick="console.log('ciao3')"
+                  ></z-tool>
+                </div>
                 <z-tool
                   icon="chevron-up"
                   tooltip="Su"
-                  onclick="console.log('ciao')"
-                ></z-tool>
-                <z-divider
-                  orientation="vertical"
-                  color="color-surface03"
-                ></z-divider>
-                <z-tool
-                  icon="chevron-down"
-                  tooltip="Giù"
-                ></z-tool>
-                <z-tool
-                  icon="chevron-up"
-                  tooltip="Su"
+                  onclick="console.log('ciao4')"
                 ></z-tool>
               </z-toolbar>
             </z-tool>
             <z-tool
               icon="chevron-up"
               tooltip="Su"
+              onclick="console.log('ciao5')"
             ></z-tool>
             <z-tool
               icon="chevron-up"
               tooltip="Su"
+              onclick="console.log('ciao6')"
             ></z-tool>
           </div>
           <div class="group">
             <z-tool
               icon="download"
               tooltip="Scarica"
+              onclick="console.log('ciao7')"
             ></z-tool>
             <z-tool
               icon="upload"
               tooltip="Carica"
+              onclick="console.log('ciao8')"
             ></z-tool>
             <z-tool
               icon="copy"
               tooltip="Copia"
+              onclick="console.log('ciao9')"
             ></z-tool>
           </div>
           <div class="group">
             <z-tool
               icon="download"
               tooltip="Scarica"
+              onclick="console.log('ciao10')"
             ></z-tool>
             <z-tool
               icon="upload"
               tooltip="Carica"
+              onclick="console.log('ciao11')"
             ></z-tool>
             <z-tool
               icon="copy"
               tooltip="Copia"
+              onclick="console.log('ciao12')"
             ></z-tool>
           </div>
         </z-toolbar>
