chore: revert index.html changes

--- a/src/index.html
+++ b/src/index.html
@@ -30,93 +30,7 @@
         <h1 slot="title">Albe test app</h1>
       </z-app-header>
     </header>
-    <main>
-      <div
-        style="
-          width: 100%;
-          height: 400px;
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          justify-content: center;
-          gap: 4px;
-        "
-      >
-        <z-toolbar>
-          <div class="group">
-            <z-tool
-              icon="gear"
-              tooltip="Impostazioni"
-              onclick="console.log('ciao1')"
-            >
-              <z-toolbar>
-                <div class="group">
-                  <z-tool
-                    icon="chevron-up"
-                    tooltip="Su"
-                    onclick="console.log('ciao2')"
-                  ></z-tool>
-                  <z-tool
-                    icon="chevron-down"
-                    tooltip="Giù"
-                    onclick="console.log('ciao3')"
-                  ></z-tool>
-                </div>
-                <z-tool
-                  icon="chevron-up"
-                  tooltip="Su"
-                  onclick="console.log('ciao4')"
-                ></z-tool>
-              </z-toolbar>
-            </z-tool>
-            <z-tool
-              icon="chevron-up"
-              tooltip="Su"
-              onclick="console.log('ciao5')"
-            ></z-tool>
-            <z-tool
-              icon="chevron-up"
-              tooltip="Su"
-              onclick="console.log('ciao6')"
-            ></z-tool>
-          </div>
-          <div class="group">
-            <z-tool
-              icon="download"
-              tooltip="Scarica"
-              onclick="console.log('ciao7')"
-            ></z-tool>
-            <z-tool
-              icon="upload"
-              tooltip="Carica"
-              onclick="console.log('ciao8')"
-            ></z-tool>
-            <z-tool
-              icon="copy"
-              tooltip="Copia"
-              onclick="console.log('ciao9')"
-            ></z-tool>
-          </div>
-          <div class="group">
-            <z-tool
-              icon="download"
-              tooltip="Scarica"
-              onclick="console.log('ciao10')"
-            ></z-tool>
-            <z-tool
-              icon="upload"
-              tooltip="Carica"
-              onclick="console.log('ciao11')"
-            ></z-tool>
-            <z-tool
-              icon="copy"
-              tooltip="Copia"
-              onclick="console.log('ciao12')"
-            ></z-tool>
-          </div>
-        </z-toolbar>
-      </div>
-    </main>
+    <main></main>
   </body>
   <style>
     body {
